Find ninja if the binary name is ninja-build

Apparently, some systems name ninja-build to the ninja building tool.
This patch figures out the executable in runtime, so the executable
can be "ninja" or "ninja-build" and still work.

BUG: 328695